# interview-tasks

./: .travis.yml  CMakeLists.txt  README.md  README.rst  answers.rst  conf.py.in  custom_main.cpp  index.rst  multiloop.cpp  multiloop_simple.cpp  questions.rst
docs/: index.html
